[gd_scene load_steps=2 format=3 uid="uid://ctdafpqhkl54s"]

[ext_resource type="Script" path="res://Scripts/Editor/EditorPlaybackControls.gd" id="1_wnhmc"]

[node name="EditorPlaybackControls" type="HBoxContainer"]
offset_right = 800.0
offset_bottom = 40.0
script = ExtResource("1_wnhmc")

[node name="SkipStartButton" type="Button" parent="."]
layout_mode = 2
text = "|◀"
tooltip_text = "Skip to Start"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
text = "▶"
tooltip_text = "Play (Space)"

[node name="PauseButton" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "⏸"
tooltip_text = "Pause (Space)"

[node name="StopButton" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "⏹"
tooltip_text = "Stop"

[node name="SkipEndButton" type="Button" parent="."]
layout_mode = 2
text = "▶|"
tooltip_text = "Skip to End"

[node name="VSeparator1" type="VSeparator" parent="."]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "00:00.00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimelineSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 0.001
value = 0.0
tooltip_text = "Timeline"

[node name="DurationLabel" type="Label" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "00:00.00"
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 2
text = "Speed:"
vertical_alignment = 1

[node name="SpeedSelector" type="OptionButton" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
tooltip_text = "Playback Speed"
